--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,3 @@
-@font-face {
-    font-family: "Ebrima";
-    src: url("https://fontsforyou.com/fonts/e/Ebrima.ttf");
-}
-.your-style {
-    font-family: "Ebrima";
-}
 *,
 *::before
 *::after{
@@ -14,7 +7,6 @@
 }
 
 html{
-    font-family: Ebrima;
     font-size: 62.5%;
     color: #434343;
 }
@@ -44,8 +36,9 @@ p{
 /*header*/
 
 header {
-    padding: 3em;
+    padding: 1.5em;
     align-items: end;
+    margin-left: 1.5em;
 }
 
 img {
@@ -53,8 +46,8 @@ img {
   }
 
 .banner{
-    width: 200px;
-    position: right 18px;   
+    max-width: 15%;
+    margin: 2em;
 }
 
 /*FORMULARIO PRINCIPAL*/
@@ -81,6 +74,7 @@ img {
 /*DISPONIBLE EN*/
 
 
+
 /*TOYOTA PLAN*/
 
 .cuadro{
@@ -88,20 +82,30 @@ img {
     text-align: center;
     padding: 2em;
 }
+
 .toyotaPlan{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 30em;
-    padding: 3em ;
+    position:relative;
+    margin:auto;
+    padding: 3em;
+    width:45%;
+}
+
+.botonRojo{
+    background-color: red;
+    color:blueviolet;
 }
 /*RAZONES PARA TENER UNA HILUX*/
 
 *{
     box-sizing: border-box;
     color: #434343;
+}
 
+.columnasAutos{
+    font-size: 4em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .row{
@@ -142,10 +146,11 @@ img {
 
 /*FOOTER*/
 
-.footer{
+.detalles{
     max-width: 1500px;
-    margin: 0 auto;
+    margin:auto;
     font-size: 1.5em;
+
 }
 
 .kansai{
@@ -157,3 +162,5 @@ img {
     color: red;
     font-size: 1.5em;
 }
+
+
