--- a/css/index.css
+++ b/css/index.css
@@ -71,9 +71,17 @@ img {
     background-color: #DFDFDF;
 }
 
+.tituloHilux{
+    padding: 0em;
+}
+
 /*DISPONIBLE EN*/
-
-
+.disponibleEn{
+    position:relative;
+    margin:auto;
+    padding: 3em;
+    width:55%;
+}
 
 /*TOYOTA PLAN*/
 
@@ -87,13 +95,22 @@ img {
     position:relative;
     margin:auto;
     padding: 3em;
-    width:45%;
+    width:25%;
 }
 
 .botonRojo{
+    position: relative;
     background-color: red;
-    color:blueviolet;
+    width: 35em;
+    border-radius: 6em;
+    color: white;
 }
+
+.botonRojoHijo{
+    text-align: center;
+    color: white;
+}
+
 /*RAZONES PARA TENER UNA HILUX*/
 
 *{
@@ -154,7 +171,6 @@ img {
 }
 
 .kansai{
-    width: 300px;
     padding: 10px;
 }
 
@@ -163,4 +179,31 @@ img {
     font-size: 1.5em;
 }
 
+
+.btn-flotante {
+	font-size: 16px; /* Cambiar el tamaño de la tipografia */
+	text-transform: uppercase; /* Texto en mayusculas */
+	font-weight: bold; /* Fuente en negrita o bold */
+	color: #ffffff; /* Color del texto */
+	border-radius: 5px; /* Borde del boton */
+	letter-spacing: 2px; /* Espacio entre letras */
+	padding: 18px 30px; /* Relleno del boton */
+	position: fixed;
+	bottom: 40px;
+	right: 40px;
+	transition: all 300ms ease 0ms;
+	z-index: 99;
+}
+.btn-flotante:hover {
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+	transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+ 	.btn-flotante {
+		font-size: 14px;
+		padding: 12px 20px;
+		bottom: 20px;
+		right: 20px;
+	}
+}
 
