--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+body{
+
+}
+
 html{
     font-size: 62.5%;
     color: #434343;
@@ -56,9 +60,10 @@ img {
     padding: 3em;
 }
 
-.formulario{
+.formularios{
     max-width: 1700px;
     margin: 0 auto;
+    font-size: 1.3em;
 }
 
 /*VERSION DE HILUX*/
@@ -166,7 +171,8 @@ img {
 .detalles{
     max-width: 1500px;
     margin:auto;
-    font-size: 1.5em;
+    font-size: 2em;
+    
 
 }
 
