--- a/css/index.css
+++ b/css/index.css
@@ -6,20 +6,31 @@
     box-sizing: border-box;
 }
 
-body{
-
-}
+@font-face {
+    font-family: 'Noah';
+    src: local('Noah Text Heavy'), local('Noah-Text-Heavy'),
+        url('NoahText-Heavy.woff2') format('woff2'),
+        url('NoahText-Heavy.woff') format('woff'),
+        url('NoahText-Heavy.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+  }
 
 html{
     font-size: 62.5%;
     color: #434343;
 }
 
+body{
+    font:'Noah';
+    font-weight: 600;
+    font-style: normal; 
+}
+
 a{
-    text-decoration: none;
-    font-size: 2em;
-    color:inherit;
-    font-family: inherit;    
+    font:'Noah';
+    font-weight: 600;
+    font-style: normal; 
 }
 
 ul, lo{
@@ -39,10 +50,9 @@ p{
 
 /*header*/
 
-header {
-    padding: 1.5em;
-    align-items: end;
-    margin-left: 1.5em;
+.principal{
+    flex-shrink: 0;
+    padding-bottom: 3em;
 }
 
 img {
@@ -50,9 +60,108 @@ img {
   }
 
 .banner{
+    position:sticky;
     max-width: 15%;
-    margin: 2em;
 }
+
+.positionImg{
+    margin: 2em;
+    margin-left: 6em; 
+}
+
+/*** ESTILOS BOTÓN SLIDE RIGHT ***/
+.ov-btn-slide-right {
+    background: rgb(71, 70, 70); /* color de fondo */
+    color: white; /* color de fuente */
+    padding: 5px 10px;
+    border-radius: 10em; /* redondear bordes */
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-block;
+  }
+  .ov-btn-slide-right:hover {
+    color: #fff; /* color de fuente hover */
+  }
+  .ov-btn-slide-right::after {
+    content: "";
+    background: red; /* color de fondo hover */
+    position: absolute;
+    z-index: -1;
+    padding: 5px 10px;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 100%;
+    right: -100%;
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+  }
+  .ov-btn-slide-right:hover::after {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+  }
+
+
+
+
+  .botonF .ov-btn-slide-right {
+    background: rgb(71, 70, 70); /* color de fondo */
+    color: white; /* color de fuente */
+    padding: 1.5em;
+    margin: 0.5em;
+    border-radius: 10em; /* redondear bordes */
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-block;
+    width:100%;
+    text-align: center;
+    font-size: 7em;
+  }
+  .botonF .ov-btn-slide-right:hover {
+    color: #fff; /* color de fuente hover */
+  }
+  botonF .ov-btn-slide-right::after {
+    content: "";
+    background: red; /* color de fondo hover */
+    position: absolute;
+    z-index: -1;
+    padding: 5px 10px;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 100%;
+    right: -100%;
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+  }
+  .botonF .ov-btn-slide-right:hover::after {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+  }
+
+
+
+
+
+
+
+.botonesHilux{
+    margin-top: -8em;
+    margin-left: 2em;
+    max-width: 100%;
+}
+
+
 
 /*FORMULARIO PRINCIPAL*/
 
@@ -60,10 +169,20 @@ img {
     padding: 3em;
 }
 
+.formularioS{
+    max-width: 1700px;
+    margin: 0 auto;
+
+}
 .formularios{
     max-width: 1700px;
     margin: 0 auto;
-    font-size: 1.3em;
+    font-size: 1.8em;
+}
+
+.form-control form-control-lg{
+    border: 65em;
+    border-radius: 0;
 }
 
 /*VERSION DE HILUX*/
